# poetry-demo

./: .gitignore  .tool-versions  README.md
dimsumpanda-poetry-demo/: pyproject.toml
dimsumpanda-poetry-demo/dimsumpanda_poetry_demo/: example.py
dimsumpanda-poetry-demo/tests/: test_example.py
