[tool.poetry]
name = "dimsumpanda-poetry-demo"
version = "0.1.2"
description = ""
authors = ["DimsumPanda <dimsumpanda@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
